// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Primitives applies semantic roles correctly 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.5}
  style={
    {
      "color": "#271F15",
      "fontFamily": "Inter_600SemiBold",
      "fontSize": 17,
      "letterSpacing": -0.2,
      "lineHeight": 22,
    }
  }
  suppressHighlighting={true}
>
  [TR] test
</Text>
`;

exports[`Typography Primitives applies tone correctly 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.5}
  style={
    {
      "color": "#FF6B5E",
      "fontFamily": "Inter_400Regular",
      "fontSize": 11,
      "letterSpacing": 0.2,
      "lineHeight": 15,
    }
  }
  suppressHighlighting={true}
>
  Error
</Text>
`;
